# learning

agent学习/: 00-agent-foundations.md  README.md  coverage-matrix.md  python-key-points.md
agent学习/final-code/: .dockerignore  .env.example  README.md  pyproject.toml
agent学习/final-code/deployments/: Dockerfile  docker-compose.yml  init.sql  nginx.conf
agent学习/final-code/src/agent_lab/: __init__.py  agent.py  api.py  config.py  context.py  deepseek.py  evaluator.py  mcp.py  pgvector_store.py  retrieval.py  safety.py  tasks.py  tools.py
agent学习/final-code/src/agent_lab/static/: index.html
agent学习/final-code/tests/: test_agent.py  test_api.py  test_api_management.py  test_context_safety.py  test_deepseek.py  test_mcp_evaluator.py  test_pgvector.py  test_retrieval.py  test_tools.py
agent学习/weeks/: week-01-langgraph-rag-agent.md  week-02-advanced-rag-tools-mcp.md  week-03-reliable-secure-agent.md  week-04-agent-service-deployment.md  week-05-agent-cases-roadmap.md
陕西应急agent实战/: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  COURSE_REWRITE_DESIGN.md  COURSE_REWRITE_PLAN.md  DELIVERY.md  DEPLOY_DOCKER.md  DEPLOY_K8S.md  EVALUATION.md  GLOSSARY.md  INTERVIEW.md  MCP.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  START_HERE.md  TECHNICAL_OVERVIEW.md  TROUBLESHOOTING.md  course-manifest.yaml
陕西应急agent实战/.github/workflows/: ci.yml
陕西应急agent实战/docs/superpowers/plans/: 2026-07-13-week10-command-console.md
陕西应急agent实战/scripts/: test_all_weeks.sh  verify_course_quality.sh  verify_structure.sh
陕西应急agent实战/weeks/week-01/: CHANGELOG.md  Makefile  README.md  WEEK-01-COURSE.md
陕西应急agent实战/weeks/week-01/backend/: pyproject.toml
陕西应急agent实战/weeks/week-01/backend/src/highway_agent/: api.py  main.py
陕西应急agent实战/weeks/week-01/docs/: acceptance.md  api.md  architecture.md  (+2 more)
陕西应急agent实战/weeks/week-02/: CHANGELOG.md  Makefile  README.md  WEEK-02-COURSE.md
陕西应急agent实战/weeks/week-03/: .env.example  CHANGELOG.md  Makefile  README.md  WEEK-03-COURSE.md
陕西应急agent实战/weeks/week-04/: CHANGELOG.md  Makefile  README.md  WEEK-04-COURSE.md
陕西应急agent实战/weeks/week-05/: CHANGELOG.md  Makefile  README.md  WEEK-05-COURSE.md
陕西应急agent实战/weeks/week-06/: CHANGELOG.md  Makefile  README.md  WEEK-06-COURSE.md
陕西应急agent实战/weeks/week-06/backend/: pyproject.toml  requirements.lock.txt
陕西应急agent实战/weeks/week-06/backend/src/highway_agent/: models.py
陕西应急agent实战/weeks/week-06/backend/tests/: test_resource_agent.py
陕西应急agent实战/weeks/week-07/: CHANGELOG.md  Makefile  README.md  WEEK-07-COURSE.md
陕西应急agent实战/weeks/week-08/: .env.example  CHANGELOG.md  Makefile  README.md  WEEK-08-COURSE.md
陕西应急agent实战/weeks/week-08/backend/: pyproject.toml
陕西应急agent实战/weeks/week-08/backend/alembic/: script.py.mako
陕西应急agent实战/weeks/week-08/backend/alembic/versions/: 0001_initial.py
陕西应急agent实战/weeks/week-08/backend/src/highway_agent/: api.py  config.py
陕西应急agent实战/weeks/week-08/backend/src/highway_agent/workflows/: approval_flow.py
陕西应急agent实战/weeks/week-08/backend/tests/: test_database_models.py
陕西应急agent实战/weeks/week-09/: CHANGELOG.md  Makefile  README.md  WEEK-09-COURSE.md
陕西应急agent实战/weeks/week-10/: CHANGELOG.md  Makefile  README.md  WEEK-10-COURSE.md  compose.dev.yaml
陕西应急agent实战/weeks/week-11/: CHANGELOG.md  Makefile  README.md  WEEK-11-COURSE.md
陕西应急agent实战/weeks/week-12/: .dockerignore  CHANGELOG.md  Makefile  README.md  WEEK-12-COURSE.md  compose.demo.yaml  compose.prod.yaml
(+175 files in other folders)
