[project]
name = "deepseek-agent-lab"
version = "0.1.0"
description = "DeepSeek 企业智能客服 Agent 教学项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.6,<6",
  "fastapi>=0.139,<1",
  "gunicorn>=23,<24",
  "httpx>=0.28,<1",
  "langgraph>=1.2,<2",
  "openai>=2.45,<3",
  "psycopg[binary]>=3.3,<4",
  "pydantic-settings>=2.14,<3",
  "pyjwt>=2.13,<3",
  "redis>=8,<9",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.51,<1",
]

[dependency-groups]
dev = [
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_lab"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
