[project]
name = "shaanxi-highway-agent-week01"
version = "0.1.0"
description = "Week 1 domain models and deterministic mock APIs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "pgvector>=0.3,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "pyyaml>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:Using .*starlette.testclient.*",
]

[tool.coverage.run]
source = ["highway_agent"]
