[project]
name = "shaanxi-highway-agent-week06"
version = "0.6.0"
description = "Week 6 resource dispatch agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "pgvector>=0.3,<1",
  "httpx>=0.28,<1",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-postgres>=3,<5",
  "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "pyyaml>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:Using .*starlette.testclient.*",
]

[tool.coverage.run]
source = ["highway_agent"]
